# c_kfc

./: .envrc  .gitignore  .gitmodules  Makefile  create-palette-includes-c.sh  kfc.c  meson.build  meson_options.txt  normalize-kitty-themes.sh  palette-includes-utils.c  palette-includes.c  palette-includes.h
docs/: color_template
etc/: kfc-utils-palettes.c.j2  palettes-template.unja  test.jinja
kfc-cli/: kfc-cli-exports.c  kfc-cli-exports.h  kfc-cli-options.h  kfc-cli-vt100-utils.h  kfc-cli.c  kfc-cli.h  meson.build
kfc-test/: kfc-test.c  kfc-test.h  meson.build
kfc-utils/: .kfc-utils-palettes-backup.c  .kfc-utils-palettes.c  kfc-utils-colors.c  kfc-utils-colors.h  kfc-utils-data.h  kfc-utils-module.c  kfc-utils-module.h  kfc-utils-palettes.c  kfc-utils.c  kfc-utils.h  meson.build
palettes/dark/: darktooth  dev  invalid  vscode
palettes/iTerm2-Color-Schemes/: novel
palettes/kitty-themes/: 1984dark  1984light  1984orwellian  3024day  3024night  abernathy  afterglow  alabaster  andromeda  apprentice  aquariumdark  aquariumlight  arcoiris  arthur  ateliersulphurpool  atom  atomonelight  aurora  ayu  ayulight  ayumirage  batman  belafontenight  birdsofparadise  blackmetal  blueberrypie  blulocodark  blulocolight  breath2  breeze  brightlights  builtindark  builtinlight  builtinpasteldark  builtinsolarizeddark  builtintangodark  builtintangolight  c64  calamity  campbell  (+216 more)
palettes/load/: adventure  adventuretime  alienblood  alucard  apprentice  argonaut  bananablueberry  bashful  belafonteday  blackmetal  blazer  bluedolphin  bluematrix  borland  breath2  broadcast  brogrammer  builtinsolarizedlight  c_ansi  c_darwin  campbell  catppuccin  chalkboard  chester  ciapre  citylights  cobalt2  cobaltneon  corvine  crayonponyfish  darkmatrix  darkpastel  darkpride  desertnight  deutersdelight  dev  doomone  doomonelight  doompeacock  doomvibrant  (+161 more)
scripts/: create-palette-includes-c.sh  normalize-kitty-themes.sh
submodules/: meson.build  meson_deps
