option('enable-binaries',
  type : 'boolean',
  value : true,
  description : 'Enable binaries.',
)
option('static-build-mode',
  type : 'boolean',
  value : true,
  description : 'Enable static build mode.',
)
option('enable-binary-tests',
  type : 'boolean',
  value : true,
  description : 'Enable binary tests.',
)
option('enable-binary-clis',
  type : 'boolean',
  value : true,
  description : 'Enable binary clis.',
)

option('enable-scc-report',
  type : 'boolean',
  value : false,
  description : 'Enable scc report',
)

