subdir('c_deps/meson/args')
subdir('c_deps/meson/osx')
subdir('c_deps/meson/deps/cargs')
subdir('c_deps/meson/deps/rgba')
subdir('c_deps/meson/deps/b64')
subdir('c_deps/meson/deps/c_img')
subdir('c_deps/meson/deps/log')
subdir('c_deps/meson/deps/tiny-regex-c')
subdir('c_deps/meson/deps/hash')
subdir('c_deps/meson/deps/fort')
subdir('c_deps/meson/deps/spin')
subdir('c_deps/meson/deps/wildcardcmp')
subdir('c_deps/meson/deps/libspinner')
subdir('c_deps/meson/deps/tempdir')
subdir('c_deps/meson/deps/c_string_buffer')
subdir('c_deps/meson/deps/module')
subdir('c_deps/meson/deps/c_vector')
subdir('c_deps/meson/deps/incbin')
subdir('c_deps/meson/deps/c_stringfn')
subdir('c_deps/meson/deps/c_fsio')
subdir('c_deps/meson/deps/djbhash')
subdir('c_deps/meson/deps/parson')
subdir('c_deps/meson/deps/bytes')
subdir('c_deps/meson/deps/which')
subdir('c_deps/meson/deps/date.c')
subdir('c_deps/meson/deps/timelib')
subdir('c_deps/meson/deps/uuid4')
subdir('c_deps/meson/deps/subprocess')
subdir('c_deps/meson/deps/murmurhash.c')
subdir('c_deps/meson/deps/timestamp')
subdir('c_deps/meson/deps/termpaint')
subdir('c_deps/meson/deps/socket99')
subdir('c_deps/meson/deps/reproc')
subdir('c_deps/meson/deps/hsluv-c')
subdir('c_deps/submodules/c_ansi/string-utils')
subdir('c_deps/submodules/c_ansi/ansi-utils')
subdir('c_deps/submodules/c_ansi/ansi-codes')
subdir('c_deps/submodules/c_ansi/ansi-rgb-utils')
subdir('c_deps/meson/deps/asprintf')
subdir('c_deps/meson/deps/ms')
subdir('c_deps/meson/deps/iowow')
subdir('c_deps/meson/deps/str-truncate')
subdir('c_deps/meson/deps/roscha')
subdir('c_deps/meson/deps/tinydir')
subdir('c_deps/exec-fzf')

c_darwin_enabled = false
if c_darwin_enabled
  subdir('c_deps/submodules/c_darwin/app')
  subdir('c_deps/submodules/c_darwin/systemprofiler')
  subdir('c_deps/submodules/c_darwin/cache-utils')
  subdir('c_deps/submodules/c_darwin/icon-utils')
  subdir('c_deps/submodules/c_darwin/process')
  subdir('c_deps/submodules/c_darwin/space-utils')
  subdir('c_deps/submodules/c_darwin/font-utils')
  subdir('c_deps/submodules/c_darwin/app-utils')
  subdir('c_deps/submodules/c_darwin/image-utils')
  subdir('c_deps/submodules/c_darwin/display-utils')
  subdir('c_deps/submodules/c_darwin/dock-utils')
  subdir('c_deps/submodules/c_darwin/iokit-utils')
  subdir('c_deps/submodules/c_darwin/menu-bar-utils')
  subdir('c_deps/submodules/c_darwin/mission-control-utils')
  subdir('c_deps/submodules/c_darwin/process-utils')
  subdir('c_deps/submodules/c_darwin/window-utils')
  subdir('c_deps/submodules/c_darwin/table-utils')
  subdir('c_deps/submodules/c_darwin/osx-keys')
  subdir('c_deps/submodules/c_darwin/core-utils')
  subdir('c_deps/submodules/c_darwin/kitty')
endif

